# zatca_erpgulf

./: 2.0.1.md  2.1.1.md  3.0.0.md  3.0.1.md  LICENSE  README.md  cert.pem  license.txt  pyproject.toml  requirements.txt  sdkprivatekey.pem  setup.py  simplified debit note.xml.xml  standard.xml.xml  version-2.0.1.md  version-2.1.1.md  version-3.0.0.md  version-3.0.1.md
.github/workflows/: frappe-semgrep.yml
zatca_erpgulf/: README.md  hooks.py  modules.txt  simplifeid invoice.xml  simplifeild credit note.xml  standard credit note.xml  standard debit note.xml
zatca_erpgulf/fixtures/: custom_field.json  dashboard.json  dashboard_chart.json  desktop_icon.json  number_card.json  page.json  report.json  workspace.json
zatca_erpgulf/java_scripts/: cert_hsh.js  signprp_hsh.js  test-convert-private.js  test-f-csr-3.js  test_invhash.js
zatca_erpgulf/overrides/: return_validation.py
zatca_erpgulf/public/css/: tooltip.css
zatca_erpgulf/public/js/: badge.js  badge_pos.js  company.js  draft.js  our_pos_invoice.js  our_sales_invoice.js  resubmit.js  resubmitpos.js  tooltip.js
zatca_erpgulf/zatca_erpgulf/: advance_payment.py  advance_sales_invoice.py  country_code.py  create_qr.py  create_xml_final_part.py  createxml.py  createxml_advance.py  createxml_advance_salesinvoice.py  csr_configuration.py  debug_xml.py  event_log.py  new.xml  no_sdk_outlinecode.py  pdf_a3.py  pos_debug_xml.py  pos_final.py  pos_schedule_background.py  pos_sign.py  pos_submit__without_xml.py  pos_submit_with_xml_qr.py  posxml.py  sales_invoice_hooks.py  sales_invoice_with_xmlqr.py  sales_invoice_withoutxml.py  schedule_pos.py  scheduler_event.py  sign_invoice.py  sign_invoice_first.py  submit_poswithqr_notmultiple.py  submit_xml_qr_notmultiple.py  tax_error.py  utils.py  validations.py  wizardbutton.py  xml_tax_data.py  zatca_background_sched.py
zatca_erpgulf/zatca_erpgulf/dashboard_chart/exemption_reasons_breakdown/: exemption_reasons_breakdown.json
zatca_erpgulf/zatca_erpgulf/doctype/: Cleared reported xml file ACC-SINV-2024-01077.xml
zatca_erpgulf/zatca_erpgulf/doctype/custom_html_block/: custom_html_block.js  (+3 more)
(+79 files in other folders)
