[project]
name = "zatca_erpgulf"
authors = [
    {name = "ERPGulf", email = "support@ERPGulf.com"}
]
description = "Implementation of Saudi E-Invoicing Phase-2 on Frappe ERPNext"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "asn1>=2.7.0,<3.0.0",
    "pikepdf>=8.0.0,<9.0.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<17.0.0"